# ToolBurn

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODEPAGER.md  README.md  install.sh  pyproject.toml  toolburn
docs/: adapter-contract.md  product-story.md  quality.md  runbook.md
docs/exec-plans/active/: README.md  toolburn-3-phase-plan.md
docs/exec-plans/completed/: README.md
scripts/: install-local.sh  validate.sh
src/toolburn/: __init__.py  cli.py  report.py  scan.py  schema.py
tests/: test_cli.py  test_schema.py
